Added a little more content to page

--- a/index.html
+++ b/index.html
@@ -3,10 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ludvig Kalberg</title>
+    <title>Ludvig Kalberg - Portfolio</title>
 </head>
 <body>
-    <h1>Velkommen til min nettside!</h1>
+    <header>
+        <h1>Ludvig Kalberg</h1>
+        <nav>
+            <a href="#about">About</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
     
+    <main>
+        <section id="about">
+        <h2>About Me</h2>
+        <p>Here i can write something about me</p>
+        </section>
+    
+        <section id="projects">
+        <h2>Projects</h2>
+        <p>Here i can write my projects</p>
+        </section>
+
+        <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:lud.kalberg@gmail.com">lud.kalberg@gmail.com</a></p>
+        </section>
+    </main>
+
 </body>
 </html>
