--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ludvig Kalberg - Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -15,7 +16,6 @@
         </nav>
     </header>
     
-    <main>
         <section id="about">
         <h2>About Me</h2>
         <p>Here i can write something about me</p>
@@ -30,7 +30,7 @@
         <h2>Contact</h2>
         <p>Email: <a href="mailto:lud.kalberg@gmail.com">lud.kalberg@gmail.com</a></p>
         </section>
-    </main>
+
 
 </body>
 </html>
