--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <a href="#about">About</a>
             <a href="#projects">Projects</a>
-            <a href="#contact">Contact</a>
+            <a href="#contact">Skills</a>
         </nav>
     </header>
     
@@ -27,10 +27,17 @@
         </section>
 
         <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: <a href="mailto:lud.kalberg@gmail.com">lud.kalberg@gmail.com</a></p>
+        <h2>Skills</h2>
+        <p>Here i can write my skills</p>
         </section>
 
+        <footer>
+            <p>Contact: <a href="mailto:lud.kalberg@gmail.com">lud.kalberg@gmail.com</a></p>
+            <p>
+                <a href="https://github.com/ludvix" target="_blank">Github</a> | 
+                <a href="http://wiki.ludvig.kalberg.org">Ludvig Kalberg Wiki (NOT UP YET)</a>
+            </p>
+        </footer>
 
 </body>
 </html>
