moved contact into footer added skills

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <a href="#about">About</a>
             <a href="#projects">Projects</a>
-            <a href="#contact">Skills</a>
+            <a href="#skills">Skills</a>
         </nav>
     </header>
     
@@ -26,7 +26,7 @@
         <p>Here i can write my projects</p>
         </section>
 
-        <section id="contact">
+        <section id="skills">
         <h2>Skills</h2>
         <p>Here i can write my skills</p>
         </section>
